--- a/src/app/yandex-autorization/yandex-autorization.component.html
+++ b/src/app/yandex-autorization/yandex-autorization.component.html
@@ -5,3 +5,7 @@
              src="//yastatic.net/doccenter/images/tech2.yandex.ru/ru/passport/doc/dg/freeze/_2dbhiELlBN3jHKGz-uOdRXjQ5g.png">
     </a>
 </div>
+
+<div>
+    <img src="https://downloader.disk.yandex.ru/disk/06a7ec29dd26d2670ebd738fd962ff225c7abca7895e97b64e14f5c23ba066c1/5cadfb4e/bBwddhVP46nTDSrAXpdnCLa9udRVSEQRW7sXthBjvdSDXOCj2CBFvDlnDJ_qeXah3-LjAMX6BJH2aExgD0qORA%3D%3D?uid=252009290&filename=15527787486491.jpg&disposition=attachment&hash=&limit=0&content_type=image%2Fjpeg&fsize=913497&hid=2355046b085c2dc91a2bd1d04de8e869&media_type=image&tknv=v2&etag=addeb9c4a7359930d874e1c2f65ee5cd">
+</div>
