add component with images

--- a/src/app/yandex-autorization/yandex-autorization.component.html
+++ b/src/app/yandex-autorization/yandex-autorization.component.html
@@ -1,4 +1,4 @@
-<div style="margin-top: 20px">
+<div class="component-yandex-autorization">
     <a>
         <img style="float: right"
              (click)="initYandexAutorization()"
