--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -19,6 +19,8 @@
     width: 200px;
     height: 200px;
 
+    object-fit: cover;
+
     border-style: double; /* Стиль линии вокруг параграфа */
     padding: 3px; /* Поля вокруг текста */
 }
