--- a/src/app/modal-window/modal-window.component.html
+++ b/src/app/modal-window/modal-window.component.html
@@ -8,10 +8,8 @@
 </div>
 <div class="main-buttons-container">
     <div  class="buttons-container">
-        <button type="button" class="btn btn-primary btn-arrow-left"
-                (click)="buttonClickPrev()">Prev</button>
-        <button type="button" class="btn btn-primary btn-arrow-right"
-                (click)="buttonClickNext()">Next</button>
+        <a class="arrow2" (click)="buttonClickPrev()">Prev</a>
+        <a class="arrow" (click)="buttonClickNext()">Next</a>
     </div>
 </div>
 <div class="modal-footer">
