--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     flex-flow: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
 
     border-style: double; /* Стиль линии вокруг параграфа */
     padding: 5px; /* Поля вокруг текста */
